Images and Videos added to dir. All content in html. clear

--- a/index.html
+++ b/index.html
@@ -6,8 +6,34 @@
     <title>Excursion</title>
   </head>
   <body>
+
+<!--Heading and Link-->
+
     <h1>Discover hidden places in the world around you</h1>
-    <h4><a href ="https://j8dgibq5bbohvo72fe5flluevlees9onkvgkmh2me25pr66amlrg.cc-propeller.cloud/#">
-      Download Excursion (Coming soon!)</a></h4>
+    <h4><a href ="https://j8dgibq5bbohvo72fe5flluevlees9onkvgkmh2me25pr66amlrg.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></h4>
+
+<!--Video-->
+
+    <p>
+      <video src="./resources/videos/excursion.mp4" controls>Video Not Supported</video>
+    </p>
+
+<!--Content and Images-->
+
+    <h2>Your personal travel guide</h2>
+    <h3>Excursion remembers places you like, and recommends new points of interest around you.</h3>
+    <p>
+      <img src="./resources/images/camp.jpg" alt="A campsite with a tent glowing from the light within" />
+    </p>
+    <p>
+      <img src="./resources/images/phone.jpg" alt="Simple outline of a smart phone" />
+    </p>
+
+<!--Closing, link and copyright-->
+
+    <h2>Coming Soon for iPhone and Android</h2>
+    <h4><a href ="https://j8dgibq5bbohvo72fe5flluevlees9onkvgkmh2me25pr66amlrg.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></h4>
+    <p>© Excursion</p>
+
   </body>
 </html>
