--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <link href="./resources/css/stylesheet.css" type="text/css" rel="stylesheet" >
+    <link href="./resources/css/style.css" type="text/css" rel="stylesheet" >
     <title>Excursion</title>
   </head>
   <body>
@@ -10,7 +9,7 @@
 <!--Heading and Link-->
 
     <h1>Discover hidden places in the world around you</h1>
-    <h4><a href ="https://j8dgibq5bbohvo72fe5flluevlees9onkvgkmh2me25pr66amlrg.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></h4>
+    <p class="link"><a href ="https://j8dgibq5bbohvo72fe5flluevlees9onkvgkmh2me25pr66amlrg.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></p>
 
 <!--Video-->
 
@@ -32,8 +31,8 @@
 <!--Closing, link and copyright-->
 
     <h2>Coming Soon for iPhone and Android</h2>
-    <h4><a href ="https://j8dgibq5bbohvo72fe5flluevlees9onkvgkmh2me25pr66amlrg.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></h4>
-    <p>© Excursion</p>
+    <p class="link"><a href ="https://j8dgibq5bbohvo72fe5flluevlees9onkvgkmh2me25pr66amlrg.cc-propeller.cloud/#">Download Excursion (Coming soon!)</a></p>
+    <p class="copyright">© Excursion</p>
 
   </body>
 </html>
